@@ -39,9 +39,9 @@
   \item{rank.name}{Simple model ranking can be carried out
   if \code{rank.name} is supplied. \code{rank.name} will
   generally refer to a column representing a model name,
-  which is to ranked. The ranking is based the Index of
-  Agreement performance, as that indicator is arguably the
-  best single model performance indicator available.}
+  which is to ranked. The ranking is based the COE
+  performance, as that indicator is arguably the best
+  single model performance indicator available.}
 
   \item{...}{Other aruments to be passed to \code{cutData}
   e.g.  \code{hemisphere = "southern"}}
@@ -77,30 +77,33 @@
 
   \item \eqn{r}, the Pearson correlation coefficient.
 
-  \item \eqn{IOA}, the Index of Agreement based on Willmott
-  et al. (2011), which spans between -1 and +1 with values
-  approaching +1 representing better model performance.
+  \item \eqn{COE}, the \emph{Coefficient of Efficiency}
+  based on Legates and McCabe (1999, 2012). There have been
+  many suggestions for measuring model performance over the
+  years, but the COE is a simple formulation which is easy
+  to interpret.
 
-  An IOA of 0.5, for example, indicates that the sum of the
-  error-magnitudes is one half of the sum of the
-  observed-deviation magnitudes.  When IOA = 0.0, it
-  signifies that the sum of the magnitudes of the errors
-  and the sum of the observed-deviation magnitudes are
-  equivalent. When IOA = -0.5, it indicates that the sum of
-  the error-magnitudes is twice the sum of the perfect
-  model-deviation and observed-deviation magnitudes. Values
-  of IOA near -1.0 can mean that the model-estimated
-  deviations about O are poor estimates of the observed
-  deviations; but, they also can mean that there simply is
-  little observed variability - so some caution is needed
-  when the IOA approaches -1.
+  A perfect model has a COE = 1. As noted by Legates and
+  McCabe although the COE has no lower bound, a value of
+  COE = 0.0 has a fundamental meaning. It implies that the
+  model is no more able to predict the observed values than
+  does the observed mean. Therefore, since the model can
+  explain no more of the variation in the observed values
+  than can the observed mean, such a model can have no
+  predictive advantage.
 
-  }
+  For negative values of COE, the model is less effective
+  than the observed mean in predicting the variation in the
+  observations.}
 
   All statistics are based on complete pairs of \code{mod}
   and \code{obs}.
 
-  Conditioning is possible through setting \code{type}.
+  Conditioning is possible through setting \code{type},
+  which can be a vector e.g. \code{type = c("weekday",
+  "season")}.
+
+  Details of the formulas are given in the openair manual.
 }
 \examples{
 ## the example below is somewhat artificial --- assuming the observed
@@ -116,9 +119,14 @@ modStats(mydata, mod = "no2", obs = "nox", type = "season")
   David Carslaw
 }
 \references{
-  Willmott, C.J., Robeson, S.M., Matsuura, K., 2011. A
-  refined index of model performance. International Journal
-  of Climatology.
+  Legates DR, McCabe GJ. (1999). Evaluating the use of
+  goodness-of-fit measures in hydrologic and hydroclimatic
+  model validation. Water Resources Research 35(1):
+  233-241.
+
+  Legates DR, McCabe GJ. (2012). A refined index of model
+  performance: a rejoinder, International Journal of
+  Climatology.
 }
 \keyword{methods}
 
